# Neural_Nets-Bettonte-Lacagnina-Lentini

./: CMakeLists.txt  CmakeLists.txt  README.md  main.cpp  matrixMult.hpp  notes.md
reports/: report.json  report1024d.json  report1024dOpt.json  report1024f.json  report1024fOpt.json  report128d.json  report128dOpt.json  report128f.json  report128fOpt.json  report256d.json  report256dOpt.json  report256f.json  report256fOpt.json  report512d.json  report512dOpt.json  report512f.json  report512fOpt.json
src/: main.cpp  matrixManagement.hpp  matrixMult.hpp  plotting.py
